# whitehole-plan-v3

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_AUDIT.md  SECURITY.md  app.py  fx_product.py  launcher.py  main.py  pyproject.toml  requirements.txt  run.sh  sidebar.py  启动白洞计划.bat
api/: __init__.py  llm_client.py  pywebview_api.py
core/: __init__.py  config.py  horn_builder.py  sge_exporter.py  text_utils.py
modes/: __init__.py  mode10_privacy.py  mode1_trajectory.py  mode2_trend.py  mode3_intervention.py  mode4_compare.py  mode5_global.py  mode6_bias.py  mode7_risk.py  mode8_ai_detect.py  mode9_duplicate.py
